# ThreatSight

./: .gitignore  README.md  pyproject.toml
.github/: ci.yml
.github/workflows/: ci.yml
log2sigma/: __init__.py  generate.py  parse.py
reports/: triage-report.md
tests/: test_corpus.py  test_detections.py  test_malware.py
threatsight/: ai_analyze.py  anomaly.py  attack.py  cli.py  config.py  dashboard.py  detector.py  emulate.py  generate.py  llm_abuse.py  metrics.py  orchestrator.py  owasp.py  rag.py  report.py  server.py  threat_model.py
threatsight/detection/: __init__.py  anomaly.py  detector.py  emulate.py  malware.py
threatsight/enrichment/: __init__.py  attack.py  threat_model.py
threatsight/evaluation/: __init__.py  metrics.py
threatsight/frontend/: index.html
threatsight/ingest/: __init__.py  corpus.py
threatsight/investigation/: __init__.py  orchestrator.py  rag.py
threatsight/output/: __init__.py  report.py  server.py
