[project]
name = "threatsight"
version = "0.1.0"
description = "ThreatSight: a WAF/web-log threat analyzer that detects attack patterns and produces MITRE ATT&CK-mapped threat reports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",      # CLI
    "polars>=1.0",      # fast log processing
    "pydantic>=2.7",    # log schema validation
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
threatsight = "threatsight.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true