[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threatsight"
version = "0.1.0"
description = "WAF/web-log threat analyzer (signature + anomaly + LLM), mapped to MITRE ATT&CK / OWASP / ATLAS."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ella (Siyeon) Park" }]

# Core: needed for the deterministic pipeline (parse -> detect -> anomaly -> report -> dashboard).
# The LLM/RAG/ATT&CK-STIX features import their heavier deps lazily, but they are listed
# here so `pip install .` yields a fully working tool that matches the README.
dependencies = [
    "pydantic>=2.0",
    "polars>=0.20",
    "numpy>=1.26",
    "typer>=0.12",
    "fastapi>=0.110",
    "httpx>=0.27",
    "anthropic>=0.39",
    "uvicorn>=0.29",
    "sentence-transformers>=2.2",
    "mitreattack-python>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
threatsight = "threatsight.cli:app"

[tool.setuptools.packages.find]
include = ["threatsight*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"